--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -5,4 +5,9 @@
   padding: 20px;
   padding-left: 50px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  position: relative;
+}
+
+h2 {
+  display: inline-block;
 }
