--- a/src/components/UI/ModalBox.module.css
+++ b/src/components/UI/ModalBox.module.css
@@ -1,9 +1,12 @@
 .modal {
-    background-color: white;
-    position: fixed;
-    width: 500px;
-    box-shadow: 0 2px 8px #1f1e1ea2;
-    border-radius: 12px;
-    padding: 15px;
-    z-index: 11;
+  background-color: white;
+  width: 500px;
+  box-shadow: 0 2px 8px #1f1e1ea2;
+  border-radius: 12px;
+  padding: 25px;
+  z-index: 11;
+  position: fixed;
+  top: 100px;
+  left: 31%;
+  text-align: center;
 }
