--- a/src/components/UI/ModalBox.module.css
+++ b/src/components/UI/ModalBox.module.css
@@ -4,9 +4,9 @@
   box-shadow: 0 2px 8px #1f1e1ea2;
   border-radius: 12px;
   padding: 25px;
+  position: absolute;
+  top: 80px;
+  left: 400px;
   z-index: 11;
-  position: fixed;
-  top: 100px;
-  left: 31%;
   text-align: center;
 }
