--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -5,9 +5,7 @@
   padding: 20px;
   padding-left: 50px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  position: fixed;
-  top: 0;
-  left: 0;
+  
 }
 
 h2 {
@@ -19,8 +17,8 @@ h2 {
   background-size: cover;
   width: 100%;
   height: 930px;
-  position: fixed;
-  top: 110px;
+  position: absolute;
+  top: 0;
   left: 0;
   z-index: -10;
 }
