--- a/src/components/Layout/CartButton.module.css
+++ b/src/components/Layout/CartButton.module.css
@@ -3,13 +3,12 @@
   color: white;
   border: none;
   border-radius: 12px;
-  padding: 15px 25px;
-  display: inline-block;
+  padding: 1rem 1.5rem;
   position: absolute;
   top: 30px;
-  right: 120px;
+  right: 60px;
   font-family: inherit;
-  font-size: 18px;
+  font-size: 1.1rem;
   align-content: center;
   cursor: pointer;
 }
@@ -22,7 +21,14 @@ button:active {
 .num-items {
   background-color: #e60000;
   margin-left: 10px;
-  padding: 5px 10px;
+  padding: 0.3rem 0.6rem;
   border-radius: 25px;
   font-weight: bold;
+}
+
+@media (max-width: 40rem) {
+  .button {
+    top: 20px;
+    right: 15px;
+  }
 }
