--- a/src/components/Layout/Header.module.css
+++ b/src/components/Layout/Header.module.css
@@ -1,24 +1,28 @@
 .header {
   background-color: red;
   color: white;
-  width: 100%;
-  padding: 20px;
-  padding-left: 50px;
+  width: 100vw;
+  padding: 1.2rem;
+  padding-left: 3rem;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-  
-}
-
-h2 {
-  display: inline-block;
+  box-sizing: border-box;
+  display: flex;
 }
 
 .main-image {
   background-image: url('../../assets/pizza_main.jpg');
   background-size: cover;
-  width: 100%;
-  height: 930px;
+  width: 100vw;
+  height: 100vh;
   position: absolute;
-  top: 0;
+  top: 80px;
   left: 0;
   z-index: -10;
+}
+
+@media (max-width: 40rem) {
+  .header {
+    padding: 0.9rem;
+    font-size: 0.9rem;
+  }
 }
