--- a/src/components/UI/CancelButton.module.css
+++ b/src/components/UI/CancelButton.module.css
@@ -8,7 +8,7 @@
   font-weight: bold;
   font-size: 18px;
   padding: 10px 14px;
-  margin-right: 2px;
+  margin: 2px;
   box-sizing: border-box;
   cursor: pointer;
 }
